src/test/deca/context/valid/this-simpleUtilization.deca
class A {
    int fouloulou;
    float leChanteurImaginaire(int fouloulou){
        this.fouloulou = 12;
    }
}