src/test/deca/context/invalid/methodCall-wrongParameters.deca
class S{
	int sum(int x, int y) {
		return x + y;
	}
}

{
	S s = new S();
	print(s.sum(3, false));
}
